<resources>
    <string name="app_name">Assignment</string>
    <string name="add_student">Add Student</string>
    <string name="add_batch">Add Batch</string>
    <string name="student_details">STUDENT DETAILS</string>
    <string name="academic_details">ACADEMIC DETAILS</string>
    <string name="student_name">Student Name</string>
    <string name="enter_student_name">Enter Student Name</string>
    <string name="dob">Date of Birth </string>
    <string name="batch_timing">Batch Timing</string>
    <string name="gender">Gender</string>
    <string name="class_grade">Class/Grade</string>
    <string name="enrolled_students">Enroll Students</string>
    <string name="other_details">OTHER DETAILS</string>
    <string name="board">Board</string>
    <string name="enrolled_subjects">Enrolled Subjects</string>
    <string name="parent_name">Parent/Guardian Name</string>
    <string name="parent_mobile_number">Parent Mobile number</string>
    <string name="student_mobile_number">Student Mobile number</string>
    <string name="batch_name">Batch/Course Name</string>
    <string name="joining_date">Joining Date</string>
    <string name="fee_amount">Fee Amount</string>
    <string name="last_year_percent">Last Year Percentage</string>
    <string name="hi_amin">Hi, Amin 👋</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="car">🚘</string>
    <string name="total_students">Total Students</string>
    <string name="Course">Course</string>
    <string name="batch">Batch</string>
    <string name="total_courses">Total Courses</string>
    <string name="total_batches">Total Batches</string>
    <string name="filter">Filter</string>
    <string name="clear_all">Clear All</string>
    <string name="apply">Apply</string>
    <string name="select_vehicle_brand">Select Vehicle Brand</string>
    <string name="petrol">Petrol</string>
    <string name="model_and_brand">Model &amp; Brand</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="select_model">Select model</string>
    <string name="select_brand">Select brand</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="enter_year">Enter year</string>
    <string name="enter_vehicle_number">Enter vehicle number</string>
    <string name="electric">Electric</string>
    <string name="diesel">Diesel</string>
    <string name="cng">CNG</string>
    <string name="select_vehicle_model">Select vehicle Model</string>
    <string name="activa_4g">Activa 4G</string>
    <string name="activa_5g">Activa 5G</string>
    <string name="activa_6g">Activa 6G</string>
    <string name="activa_125">Activa 125</string>
    <string name="activa_125_bsg">Activa 125 BSG</string>
    <string name="activa_h_smart">Activa H-Smart</string>
    <string name="tata">Tata</string>
    <string name="honda">Honda</string>
    <string name="hero">Hero</string>
    <string name="bajaj">Bajaj</string>
    <string name="yamaha">Yamaha</string>
    <string name="others">Others</string>
    <string name="create_batch">Create Batch</string>
</resources>