<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="16dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"
            android:layout_alignParentStart="true"
            android:textColor="@color/dark_text_color"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_cross" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_color"
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"/>


    <LinearLayout
        android:id="@+id/leftMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.3">

        <TextView
            android:id="@+id/brandOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/class_grade"
            android:textSize="13sp"
            android:padding="6dp"
            android:textColor="@color/dark_text_color"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="10dp"
            android:background="@color/view_color" />
        <TextView
            android:id="@+id/fuelTypeOption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/board"
            android:padding="6dp"
            android:textSize="13sp"
            android:textColor="@color/dark_text_color"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rightList"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@color/filter_item_bg_color"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toEndOf="@id/leftMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomButtons" />

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/clearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/dark_text_color"
            android:padding="10dp"
            android:background="@drawable/rounded_border_bg"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:text="@string/clear_all" />

        <TextView
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/apply"
            android:layout_weight="1"
            android:background="@drawable/round_blue_background"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
