<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeScreenActivity">
    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@color/dark_bg_color"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="58dp"
            android:layout_height="59dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/avatar" />

        <TextView
            android:id="@+id/hiiTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageView"
            android:text="@string/hi_amin"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/hiiTv"
            android:layout_alignStart="@id/hiiTv"
            android:textColor="@color/white"
            android:textStyle="normal"
            android:text="@string/welcome_back"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />


        <LinearLayout
            android:id="@+id/columnLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/imageView">

            <LinearLayout
                android:id="@+id/studentCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/light_yellow_bg_color"
                android:background="@drawable/rounded_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:text="Student"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textColor="@color/dark_text_color"
                    android:text="@string/total_students" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/batchCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:backgroundTint="@color/light_blue_bg_color"
                android:background="@drawable/rounded_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/batch"
                    android:paddingBottom="3dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textColor="@color/dark_text_color"
                    android:text="@string/total_batches" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/column2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/columnLayout">

            <LinearLayout
                android:id="@+id/attendanceCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/light_yellow_bg_color"
                android:background="@drawable/rounded_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="3dp"
                    android:text="Attendance"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textColor="@color/dark_text_color"
                    android:text="@string/total_students" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/newCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:backgroundTint="@color/light_blue_bg_color"
                android:background="@drawable/rounded_background"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:paddingBottom="3dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:textColor="@color/dark_text_color"
                    android:text="@string/total_students"/>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>