<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BatchRegistrationActivity">

    <LinearLayout
        android:id="@+id/headerLL"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scrollView">

        <ImageView
            android:id="@+id/backArrowIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/headerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/add_student"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintTop_toBottomOf="@+id/headerLL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/topLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/headerLL">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/brandInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/student_name"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="14dp"
                    app:boxCornerRadiusBottomStart="14dp"
                    app:boxCornerRadiusTopEnd="14dp"
                    app:boxCornerRadiusTopStart="14dp"
                    app:boxStrokeColor="@color/view_color"
                    app:boxStrokeWidth="0.2dp"
                    app:hintTextColor="@color/label_text_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:padding="16dp"
                        android:textColor="@color/hint_text_color"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/modelInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/dob"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="14dp"
                    app:boxCornerRadiusBottomStart="14dp"
                    app:boxCornerRadiusTopEnd="14dp"
                    app:boxCornerRadiusTopStart="14dp"
                    app:boxStrokeColor="@color/view_color"
                    app:boxStrokeWidth="0.2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dobEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/calendar_month_24"
                        android:hint="@string/dob"
                        android:padding="16dp"
                        android:focusable="true"
                        android:cursorVisible="false"
                        android:inputType="none"
                        android:textColor="@color/hint_text_color"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fuelTypeInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/gender"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="14dp"
                    app:boxCornerRadiusBottomStart="14dp"
                    app:boxCornerRadiusTopEnd="14dp"
                    app:boxCornerRadiusTopStart="14dp"
                    app:boxStrokeColor="@color/view_color"
                    app:boxStrokeWidth="0.2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/genderEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/down_arrow"
                        android:hint="@string/gender"
                        android:inputType="none"
                        android:focusable="false"
                        android:clickable="true"
                        android:padding="16dp"
                        android:cursorVisible="false"
                        android:textColor="@color/hint_text_color"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/vehicleNoInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/class_grade"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusBottomEnd="14dp"
                    app:boxCornerRadiusBottomStart="14dp"
                    app:boxCornerRadiusTopEnd="14dp"
                    app:boxCornerRadiusTopStart="14dp"
                    app:boxStrokeColor="@color/view_color"
                    app:boxStrokeWidth="0.2dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/classEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="true"
                        android:focusable="false"
                        android:hint="@string/class_grade"
                        android:inputType="text"
                        android:drawableEnd="@drawable/down_arrow"
                        android:padding="20dp"
                        android:textColor="@color/hint_text_color"
                        android:textSize="12sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/addButtonLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/addButtonTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_blue_background"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/add_student"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>